welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:4: error: '(' expected but identifier found.
    if isFacingTrail() {avance();baisseBrosse();leveBrosse()}
       ^SlugHunting:6: error: illegal start of simple expression
  }
  ^